[package]
name = "gcs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11.8"
gcp_auth = "0.7.5"
anyhow = "1.0.70"
tokio-util = { version = "0.7.7", features = ["io"]}
tokio-stream = "0.1.12"
tokio = "1"

[build-dependencies]
tonic-build = "0.8"
