[package]
name = "gcs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
grpcio = {version = "0.12.1", default-features = false, features = ["openssl-vendored", "protobuf-codec"]}
protobuf = "~2"
anyhow = "1.0.70"

[build-dependencies]
protoc-grpcio = "3.0.0"
